cmake_minimum_required(VERSION 3.26)
project(Mazmum C)

set(CMAKE_C_STANDARD 23)

add_executable(Mazmum main.c
        Engine/BFG.c
        Kernel/BFG.h
        Engine/CRC.c
        Kernel/CRC.h
        Engine/DADES.c
        Kernel/Des.h
        Engine/HmaCMD.c
        Kernel/HmaCMD.h
        MAZM/MazmumAdam.c
        Engine/Net/MazmumAfp.c
        MAZM/MazmumAsterisk.c
        MAZM/MazmumCiscoEnbl.c
        Engine/Net/MazmumCisco.c
        MAZM/MazmumCobaltStrike.c
        MAZM/MazmumCsv.c
        Engine/Data/MazmumFireBird.c
        Engine/Net/MazmumFTP.c
        Engine/Net/MazmumHTTPForm.c
        Engine/Net/MazmumProxy.c
        Engine/Net/MazmumHTTP.c
        Kernel/Net/MazmumHTTP.h
        Engine/Net/MazmumICQ.c
        MAZM/MazmumIMAP.c
        Engine/Net/MazmumIRC.c
        MAZM/MazmumIDP.c
        Engine/Data/MazmumMemCached.c
        MAZM/MazmumMod.c
        Kernel/AlGhadab/MazmumMod.h
        Engine/Data/MazmumMongoDB.c
        Engine/Data/MazmumMySQL.c
        Engine/Data/MazmumMSSQL.c
        MAZM/MazmumNCP.c
        Engine/Net/MazmumNNTP.c
        MAZM/MazmumOracleListener.c
        MAZM/MazmumOracleSid.c
        MAZM/MazmumOracle.c
        MAZM/MazmumPCanyWhere.c
        MAZM/MazmumPcNfs.c
        MAZM/MazmumPOP.c
        Engine/Data/MazmumPostgreSQL.c
        MAZM/MazmumRadmin.c
        MAZM/MazmumRDP.c
        Engine/Data/MazmumRedis.c
        MAZM/MazmumRexec.c
        MAZM/MazmumRLogin.c
        MAZM/MazmumRpCap.c
        MAZM/MazmumRsh.c
        MAZM/MazmumRtSp.c
        MAZM/MazmumS7300.c
        MAZM/MazmumSapr.c
        MAZM/MazmumSip.c
        MAZM/MazmumSmb.c
        MAZM/MazmumSmbT.c
        Engine/Net/MazmumSMTPE.c
        Engine/Net/MazmumSMTP.c
        Engine/Net/MazmumSNMP.c
        Engine/Net/MazmumSOCKSF.c
        Engine/Net/MazmumSSH.c
        MAZM/MazmumSSHKey.c
        MAZM/MazmumSVN.c
        MAZM/MazmumTeamSpeak.c
        Engine/Net/MazmumTelNet.c
        MAZM/MazmumTime.c
        MAZM/MazmumAuthD.c
        MAZM/MazmumVNC.c
        Scripts/MazmumWizard.sh
        Engine/Net/MazmumXMPP.c
        MAZM/Mazmum.c
        Kernel/LibPqFe.h
        Engine/NTLM.c
        Kernel/NTLM.h
        Kernel/Performance.h
        Kernel/Data/PostgresExt.h
        Engine/PwInspector.c
        Engine/SASL.c
        Kernel/SASL.h
        Config/Config.c
        Kernel/Net/MazmumAFP.h
        MAZM/MazmumAFP.c
        Kernel/Config/Config.h
        Kernel/AlGhadab/MazmumAsteris.h
        Kernel/AlGhadab/MazmumCobaltStrike.h
        Kernel/AlGhadab/MazmumCsv.h
        Kernel/Data/MazmumFireBird.h
        Kernel/Net/MazmumFTP.h
        Kernel/Net/MazmumHTTPForm.h
        Kernel/Net/MazmumTelNet.h
        Kernel/Net/MazmumXMPP.h
        Kernel/Net/MazmumSSH.h
        Kernel/Net/MazmumSOCKSF.h
        Kernel/Net/MazmumSMTP.h
        Kernel/Net/MazmumSNMP.h
        Kernel/Net/MazmumProxy.h
        Kernel/Net/MazmumNNTP.h
        Kernel/Net/MazmumIRC.h
        Kernel/Net/MazmumICQ.h
        Kernel/Net/MazmumTUEPE.h
        Engine/Net/MazmumTUEPE.c
        Kernel/AlGhadab/MazmumIMAP.h
        Kernel/AlGhadab/MazmumIDP.h
        Kernel/Data/MazmumMemCached.h
        Kernel/Data/MazmumMongoDB.h
        Kernel/Data/MazmumMSSQL.h
        Kernel/Data/MazmumMySQL.h
        Kernel/AlGhadab/MazmumNCP.h
        Kernel/AlGhadab/MazmumOracleListener.h
        Kernel/AlGhadab/MazmumOracleSid.h
        Kernel/AlGhadab/MazmumOracle.h
        Kernel/AlGhadab/MazmumPCanyWhere.h)
