cmake_minimum_required(VERSION 3.26)
project(Mazmum C)

set(CMAKE_C_STANDARD 23)

add_executable(Mazmum main.cxx
        Engine/Bfg.cxx
        Kernel/BFG.hxx
        Engine/Crc.cxx
        Kernel/CRC.hxx
        Engine/DADES.cxx
        Kernel/Des.hxx
        Engine/HmaCMD.cxx
        Kernel/HmaCMD.hxx
        MAZM/MazmumAdam.cxx
        Engine/Net/MazmumAfp.cxx
        MAZM/MazmumAsterisk.cxx
        MAZM/MazmumCiscoEnbl.cxx
        Engine/Net/MazmumCisco.cxx
        MAZM/MazmumCobaltStrike.cxx
        MAZM/MazmumCsv.cxx
        Engine/Data/MazmumFireBird.cxx
        Engine/Net/MazmumFTP.cxx
        Engine/Net/MazmumHTTPForm.cxx
        Engine/Net/MazmumProxy.cxx
        Engine/Net/MazmumHTTP.cxx
        Kernel/Net/MazmumHTTP.hxx
        Engine/Net/MazmumICQ.cxx
        MAZM/MazmumIMAP.cxx
        Engine/Net/MazmumIRC.cxx
        MAZM/MazmumIDP.cxx
        Engine/Data/MazmumMemCached.cxx
        MAZM/MazmumMod.cxx
        Kernel/AlGhadab/MazmumMod.h
        Engine/Data/MazmumMongoDB.cxx
        Engine/Data/MazmumMySQL.cxx
        Engine/Data/MazmumMSSQL.cxx
        MAZM/MazmumNCP.cxx
        Engine/Net/MazmumNNTP.cxx
        MAZM/MazmumOracleListener.cxx
        MAZM/MazmumOracleSid.cxx
        MAZM/MazmumOracle.cxx
        MAZM/MazmumPCanyWhere.cxx
        MAZM/MazmumPcNfs.cxx
        MAZM/MazmumPOP.cxx
        Engine/Data/MazmumPostgreSQL.cxx
        MAZM/MazmumRadmin.cxx
        MAZM/MazmumRDP.cxx
        Engine/Data/MazmumRedis.cxx
        MAZM/MazmumRexec.cxx
        MAZM/MazmumRLogin.cxx
        MAZM/MazmumRpCap.cxx
        MAZM/MazmumRsh.cxx
        MAZM/MazmumRtSp.cxx
        MAZM/MazmumS7300.cxx
        MAZM/MazmumSapr.cxx
        MAZM/MazmumSip.cxx
        MAZM/MazmumSmb.cxx
        MAZM/MazmumSmbT.cxx
        Engine/Net/MazmumSMTPE.cxx
        Engine/Net/MazmumSMTP.cxx
        Engine/Net/MazmumSNMP.cxx
        Engine/Net/MazmumSOCKSF.cxx
        Engine/Net/MazmumSSH.cxx
        MAZM/MazmumSSHKey.cxx
        MAZM/MazmumSVN.cxx
        MAZM/MazmumTeamSpeak.cxx
        Engine/Net/MazmumTelNet.cxx
        MAZM/MazmumTime.cxx
        MAZM/MazmumAuthD.cxx
        MAZM/MazmumVNC.cxx
        Scripts/MazmumWizard.sh
        Engine/Net/MazmumXMPP.cxx
        MAZM/Mazmum.cxx
        Kernel/LibPqFe.hxx
        Engine/NTLM.cxx
        Kernel/NTLM.hxx
        Kernel/Performance.hxx
        Kernel/Data/PostgresExt.hxx
        Engine/PwInspector.cxx
        Engine/SASL.cxx
        Kernel/SASL.hxx
        Config/Config.c
        Kernel/Net/MazmumAFP.hxx
        MAZM/MazmumAFP.cxx
        Kernel/Config/Config.hxx
        Kernel/AlGhadab/MazmumAsteris.hxx
        Kernel/AlGhadab/MazmumCobaltStrike.hxx
        Kernel/AlGhadab/MazmumCsv.hxx
        Kernel/Data/MazmumFireBird.hxx
        Kernel/Net/MazmumFTP.hxx
        Kernel/Net/MazmumHTTPForm.hxx
        Kernel/Net/MazmumTelNet.hxx
        Kernel/Net/MazmumXMPP.hxx
        Kernel/Net/MazmumSSH.hxx
        Kernel/Net/MazmumSOCKSF.hxx
        Kernel/Net/MazmumSNMP.hxx
        Kernel/Net/MazmumProxy.hxx
        Kernel/Net/MazmumNNTP.hxx
        Kernel/Net/MazmumIRC.hxx
        Kernel/Net/MazmumICQ.hxx
        Kernel/Net/MazmumTUEPE.hxx
        Engine/Net/MazmumTUEPE.cxx
        Kernel/AlGhadab/MazmumIMAP.hxx
        Kernel/AlGhadab/MazmumIDP.hxx
        Kernel/Data/MazmumMemCached.hxx
        Kernel/Data/MazmumMongoDB.hxx
        Kernel/Data/MazmumMSSQL.hxx
        Kernel/Data/MazmumMySQL.hxx
        Kernel/AlGhadab/MazmumNCP.hxx
        Kernel/AlGhadab/MazmumOracleListener.hxx
        Kernel/AlGhadab/MazmumOracleSid.hxx
        Kernel/AlGhadab/MazmumOracle.hxx
        Kernel/AlGhadab/MazmumPCanyWhere.hxx
        Kernel/AlGhadab/MazmumPcNfs.hxx
        Kernel/AlGhadab/MazmumPOP.hxx
        Kernel/Data/MazmumPostgreSQL.hxx
        Kernel/AlGhadab/MazmumRadmin.hxx
        Kernel/AlGhadab/MazmumRDP.hxx
        Kernel/Data/MazmumRedis.hxx
        Kernel/AlGhadab/MazmumRexec.hxx
        Kernel/AlGhadab/MazmumRLogin.hxx
        Kernel/AlGhadab/MazmumRpCap.hxx
        Kernel/AlGhadab/MazmumRsh.hxx
        Kernel/AlGhadab/MazmumRtSp.hxx
        Kernel/AlGhadab/MazmumS7300.hxx
        Kernel/AlGhadab/MazmumSapr.hxx
        Kernel/AlGhadab/MazmumSip.hxx
        Kernel/AlGhadab/MazmumSmb.hxx
        Kernel/AlGhadab/MazmumSmbT.hxx
        Kernel/Net/MazmumSMTP.hxx)
